--- a/standard_document.adoc
+++ b/standard_document.adoc
@@ -19,10 +19,10 @@
 |[big]*Open Geospatial Consortium*
 |Submission Date: 2018-03-20
 |Approval Date:      2018-08-27
-|Publication Date:      yyyy-dd-mm
-|External identifier of this OGC(R) document:
+|Publication Date:      2018-12-19
+|External identifier of this OGC(R) document:  http://www.opengis.net/doc/BP/CDB-core-annexes/1.1
 |Internal reference number of this OGC(R) document:        16-005r3
-|Version: 6.3.1
+|Version: 1.1
 |Category: OGC® Best Practice
 |Editor:      Carl Reed
 |===
@@ -44,9 +44,10 @@
 |*Warning*
 |===
 
-This document is not an OGC Standard. This document is distributed for review and comment. This document is subject to change without notice and may not be referred to as an OGC Standard.
-
-Recipients of this document are invited to submit, with their comments, notification of any relevant patent rights of which they are aware and to provide supporting documentation.
+This document defines an OGC Best Practices on a particular technology or approach related to an OGC
+standard. This document is *not* an OGC Standard and may not be referred to as an OGC Standard. It is
+subject to change without notice. However, this document is an *official* position of the OGC membership
+on this particular technology topic.
 
 [width = "50%", grid = "none"]
 |===
@@ -120,7 +121,7 @@ include::annex-q.adoc[]
 
 include::annex-r.adoc[]
 
-include::annex-s.adoc[] 
+include::annex-s.adoc[]
 
 
 <<<
