--- a/annex-history.adoc
+++ b/annex-history.adoc
@@ -6,4 +6,5 @@
 |Date |Release |Editor | Primary clauses modified |Description
 |2017-02-23 | 1.0 | C. Reed | All |
 |2018-08-28 | 1.1 | C. Reed | All |
+|2019-12-16 |1.2 |C. Reed | Various |Changes for version 1.2
 |===
