--- a/clause_0_front_material.adoc
+++ b/clause_0_front_material.adoc
@@ -1,6 +1,6 @@
 [big]*i.     Abstract*
 
-This document provides the Annexes for the CDB Core: Model and Physical Structure standard. The only exception is Annex A, Abstract Test Suite. The CDB ATS Annex is in Volume 1: Core document.
+This document provides the Annexes for the CDB Core: Model and Physical Structure Standard. The only exception is Annex A, Abstract Test Suite (ATS). The CDB ATS Annex is in Volume 1: Core document.
 
 [big]*ii.    Keywords*
 
@@ -9,9 +9,6 @@ The following are keywords to be used by search engines and document catalogues.
 ogcdoc, OGC document,  ogcdoc,  CDB, annexes
 
 [big]*iii.   Preface*
-
-
-
 
 Attention is drawn to the possibility that some of the elements of this document may be the subject of patent rights. The Open Geospatial Consortium shall not be held responsible for identifying any or all such patent rights.
 
@@ -39,8 +36,6 @@ OGC Document 15-003: OGC Common Data Base Volume 1 Main Body. An
 extensive listing of contributors to the legacy industry-led CDB
 specification is at Chapter 11, pp 475-476 in that OGC Best Practices
 Document (https://portal.opengeospatial.org/files/?artifact_id=61935).
-
-
 
 [big]*v.     Submitters*
 
