--- a/standard_document.adoc
+++ b/standard_document.adoc
@@ -17,14 +17,14 @@
 |===
 |{set:cellbgcolor:#FFFFFF}
 |[big]*Open Geospatial Consortium*
-|Submission Date: 2020-01-21
-|Approval Date:      2020-08-24
-|Publication Date:      2021-02-26
+|Submission Date: 2023-XX-XX
+Approval Date:      2023-XX-XX
+|Publication Date:      2023-XX-XX
 |External identifier of this OGC(R) document:  http://www.opengis.net/doc/BP/CDB-core-annexes/1.2
-|Internal reference number of this OGC(R) document:        16-005r4
+|Internal reference number of this OGC(R) document:        16-005r5
 |Version: 1.2
 |Category: OGC® Best Practice
-|Editor:      Carl Reed
+|Editor:      Carl Reed, David Graham
 |===
 
 [cols = "^", frame = "none"]
@@ -35,7 +35,7 @@
 [cols = "^", frame = "none", grid = "none"]
 |===
 |*Copyright notice*
-|Copyright (C) 2021 Open Geospatial Consortium
+|Copyright (C) 2023 Open Geospatial Consortium
 |To obtain additional rights of use, visit http://www.ogc.org/legal/
 |===
 
