CDB V1.3 editorial updates

--- a/standard_document.adoc
+++ b/standard_document.adoc
@@ -53,7 +53,7 @@ on this particular technology topic.
 |===
 |Document type:   	    OGC® Best Practice
 |Document subtype:   
-|Document stage:   	Approved
+|Document stage:   	Draft
 |Document language: 	English
 |===
 
