--- a/standard_document.adoc
+++ b/standard_document.adoc
@@ -1,5 +1,5 @@
-:Title: OGC CDB Core Model and Physical Structure Annexes (Best Practice)
-:titletext: OGC CDB Core Model and Physical Structure Annexes (Best Practice)
+:Title: Volume 2: OGC CDB Core Model and Physical Structure Annexes (Best Practice)
+:titletext: Volume 2: OGC CDB Core Model and Physical Structure Annexes (Best Practice)
 :doctype: book
 :encoding: utf-8
 :lang: en
@@ -20,7 +20,7 @@
 |Submission Date: 2023-XX-XX
 Approval Date:      2023-XX-XX
 |Publication Date:      2023-XX-XX
-|External identifier of this OGC(R) document:  http://www.opengis.net/doc/BP/CDB-core-annexes/1.2
+|External identifier of this OGC(R) document:  http://www.opengis.net/doc/BP/CDB-core-annexes/1.3
 |Internal reference number of this OGC(R) document:        16-005r5
 |Version: 1.3
 |Category: OGC® Best Practice
