--- a/standard_document.adoc
+++ b/standard_document.adoc
@@ -18,7 +18,7 @@
 |{set:cellbgcolor:#FFFFFF}
 |[big]*Open Geospatial Consortium*
 |Submission Date: 2023-XX-XX
-Approval Date:      2023-XX-XX
+|Approval Date:      2023-XX-XX
 |Publication Date:      2023-XX-XX
 |External identifier of this OGC(R) document:  http://www.opengis.net/doc/BP/CDB-core-annexes/1.3
 |Internal reference number of this OGC(R) document:        16-005r5
